Fix margins on mobile

--- a/index.css
+++ b/index.css
@@ -213,8 +213,8 @@ main {
 
   .skills-sub,
   .project {
-    max-width: 100%;
-    min-width: 100%;
+    min-width: 90%;
+    max-width: 90%;
   }
 
   #project-section,
